# Existential-Pipelines

./: CHANGELOG.md  Dockerfile  ExistentialPipelines.cabal  LICENSE  default.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: ExistentialPipelines-0.1.0.0-inplace.conf  package.cache
lib/Control/: Honad.hs  Pipeline.hs
