cabal-version:      3.4
name:               ExistentialPipelines
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             amanfreecs
maintainer:         aman.hobo@gmail.com
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common options
    ghc-options: -Wall -staticlib

library
    import:           options

    exposed-modules:  Control.Pipeline, Control.Honad

    build-depends:    base ^>=4.20.2.0

    hs-source-dirs:   lib

    default-language: Haskell2010

test-suite ExistentialPipelines-test
    import:           options

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.20.2.0,
        ExistentialPipelines
